fix: cloud transition on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -158,6 +158,9 @@ body {
   z-index: 100;
   transition: transform 0.8s ease-in-out;
   transform: translateX(-100%);
+  background-image: url('/map/leftCloud.webp');
+  background-position: right;
+  background-repeat: no-repeat;
 }
 
 .left-cloud-inout {
@@ -171,6 +174,9 @@ body {
   z-index: 100;
   transition: transform 0.8s ease-in-out;
   transform: translateX(100%);
+  background-image: url('/map/rightCloud.webp');
+  background-position: left;
+  background-repeat: no-repeat;
 }
 
 .right-cloud-inout {
